--- a/appspec.yml
+++ b/appspec.yml
@@ -2,19 +2,5 @@ version: 0.0
 os: linux
 
 files:
-  - source: /public/index.html                    # 同期元
-    destination: /usr/share/nginx/html # 同期先
-
-permissions:
-  - object: /usr/share/nginx/html
-    owner: root
-    group: root
-    mode: 755
-    type:
-      - directory
-  - object: /usr/share/nginx/html
-    owner: root
-    group: root
-    mode: 644
-    type:
-      - file
+  - source: /                    # 同期元
+    destination: /var/www # 同期先
